<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mileagecalculator.fuelefficiency.ShowRecordsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/show_records"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleRecords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView"
            android:layout_below="@+id/topTitle"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/notFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView"
            android:layout_below="@+id/topTitle"
            android:gravity="center"
            android:text="@string/records_not_found"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/dimBg"
        android:fitsSystemWindows="true" />

    <include layout="@layout/content_slide_up_view" />

</RelativeLayout>