<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fuel_entry"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="12"
        android:gravity="center|top"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_entry"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:spinnerMode="dropdown"
            tools:ignore="NestedWeights,RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="53"
                android:gravity="center|right"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/tv_DateMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/date"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_OldReadingMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/old_reading"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_NewReadingMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/new_reading"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_FuelMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="left"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/fuel"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_PriceMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/price"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="47"
                android:gravity="center|left"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_Date"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_shape_tv"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textIsSelectable="true"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/btn_Date"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/tv_Date"
                        android:background="@drawable/date" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/edt_Old_Reading"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_shape_tv"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:padding="10dp"
                    android:textStyle="normal"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/edt_New_Reading"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_shape_tv"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:textStyle="normal">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/edt_Fuel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_shape_tv"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/in_liters"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:padding="10dp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edt_Price"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_shape_tv"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:padding="10dp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="28"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_shape_btn"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:gravity="center|bottom">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer" />
    </LinearLayout>

</LinearLayout>